c++모듈화 연습

--- a/c_opencv/c_opencv/c_opencv.vcxproj.filters
+++ b/c_opencv/c_opencv/c_opencv.vcxproj.filters
@@ -13,10 +13,21 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="소스 파일\imread">
+      <UniqueIdentifier>{8fb6f870-12af-46bd-b80d-34bfadb2446b}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="imread.cpp">
+      <Filter>소스 파일\imread</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="imread.h">
+      <Filter>소스 파일\imread</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
