--- a/c_opencv/c_opencv/c_opencv.vcxproj
+++ b/c_opencv/c_opencv/c_opencv.vcxproj
@@ -19,11 +19,15 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Capture.cpp" />
     <ClCompile Include="imread.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="resize.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Capture.h" />
     <ClInclude Include="imread.h" />
+    <ClInclude Include="resize.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
