concat 시도중 실패 다른방법 강구 필요

--- a/c_opencv/c_opencv/c_opencv.vcxproj
+++ b/c_opencv/c_opencv/c_opencv.vcxproj
@@ -20,12 +20,14 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Capture.cpp" />
+    <ClCompile Include="concat.cpp" />
     <ClCompile Include="imread.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="resize.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Capture.h" />
+    <ClInclude Include="concat.h" />
     <ClInclude Include="imread.h" />
     <ClInclude Include="resize.h" />
   </ItemGroup>
