--- a/c_opencv/c_opencv.vcxproj
+++ b/c_opencv/c_opencv.vcxproj
@@ -20,8 +20,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="adaptThreshold.cpp" />
+    <ClCompile Include="affine.cpp" />
+    <ClCompile Include="blur.cpp" />
     <ClCompile Include="Capture.cpp" />
-    <ClCompile Include="concat.cpp" />
     <ClCompile Include="cvtColor.cpp" />
     <ClCompile Include="imread.cpp" />
     <ClCompile Include="main.cpp" />
@@ -30,8 +31,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="adaptThreshold.h" />
+    <ClInclude Include="affine.h" />
+    <ClInclude Include="blur.h" />
     <ClInclude Include="Capture.h" />
-    <ClInclude Include="concat.h" />
     <ClInclude Include="cvtColor.h" />
     <ClInclude Include="imread.h" />
     <ClInclude Include="resize.h" />
