모폴리지 연산 공부

--- a/c_opencv/c_opencv.vcxproj
+++ b/c_opencv/c_opencv.vcxproj
@@ -24,8 +24,11 @@
     <ClCompile Include="blur.cpp" />
     <ClCompile Include="Capture.cpp" />
     <ClCompile Include="cvtColor.cpp" />
+    <ClCompile Include="dilate.cpp" />
+    <ClCompile Include="erode.cpp" />
     <ClCompile Include="imread.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="perspective.cpp" />
     <ClCompile Include="resize.cpp" />
     <ClCompile Include="threshold.cpp" />
   </ItemGroup>
@@ -35,7 +38,10 @@
     <ClInclude Include="blur.h" />
     <ClInclude Include="Capture.h" />
     <ClInclude Include="cvtColor.h" />
+    <ClInclude Include="dilate.h" />
+    <ClInclude Include="erode.h" />
     <ClInclude Include="imread.h" />
+    <ClInclude Include="Perspective.h" />
     <ClInclude Include="resize.h" />
     <ClInclude Include="threshold.h" />
   </ItemGroup>
